@@ -108,10 +108,6 @@ $form-width-input-short : calc(100% -  #{$form-width-label} - #{$form-input-padd
   color: $almost-expired;
 }
 
-/*Remove error when not needed*/
-.error.search, .error.grocery, .error.product, .error.product-good, .error.product-expired {
-  display: none;
-}
 
 /*Input background colors*/
 
