@@ -61,6 +61,12 @@ $button-width: 50px;
   position: absolute;
 }
 
+.fridge-search{
+  position: absolute;
+  top: 150px;
+  font-size: 25px;
+}
+
 .add-row {
   position: relative;
   left: 85%;
