@@ -11,3 +11,7 @@
     flex-basis: 100%;
     min-width: 100%;
 }
+
+.form {
+    width: 100%;
+}
